# dj-cookiecutter

./: .gitignore  LICENSE  README.md  cookiecutter.json  dj-cookiecutter.code-workspace
basic-package/datajoint_basic-package/: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  environment.yml  noxfile.py  pyproject.code-workspace  pyproject.toml
basic-package/datajoint_basic-package/.github/workflows/: pre-commit.yml  run-tests.yml
basic-package/datajoint_basic-package/configs/: docstrings.mustache
basic-package/datajoint_basic-package/notebooks/: template.ipynb
basic-package/datajoint_basic-package/src/basic_package/: __init__.py  __main__.py
basic-package/{{cookiecutter.github_repo}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  {{cookiecutter._vscode_ws_name}}.code-workspace
basic-package/{{cookiecutter.github_repo}}/.github/ISSUE_TEMPLATE/: bug_report.yml
basic-package/{{cookiecutter.github_repo}}/.github/workflows/: pre-commit.yml  run-tests.yml
basic-package/{{cookiecutter.github_repo}}/notebooks/: 01-data-model-example.py  template.ipynb
basic-package/{{cookiecutter.github_repo}}/src/cim_extra/: lif.py
basic-package/{{cookiecutter.github_repo}}/src/{{cookiecutter.__pkg_import_name}}/: __init__.py  __main__.py  version.py
basic-package/{{cookiecutter.github_repo}}/tests/: conftest.py
basic-package/{{cookiecutter.github_repo}}/tests/unit/: test_dj_config.py  test_entrypoint.py
datajoint-workflow/science-institute_brain-lab/: .cookiecutter.json  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  brain-lab.code-workspace  datajoint-workflow-brain.code-workspace  dj_local_conf.json  environment.yml  mkdocs.yml  noxfile.py  pyproject.code-workspace  pyproject.toml  sciops-brain-lab.code-workspace
datajoint-workflow/science-institute_brain-lab/.github/ISSUE_TEMPLATE/: bug_report.yml
datajoint-workflow/science-institute_brain-lab/.github/workflows/: main-cicd.yml  package-updates.yml  pre-commit.yml  run-tests.yml
datajoint-workflow/science-institute_brain-lab/configs/: .gitignore  axon.yaml  cookiecutterc.yml
datajoint-workflow/science-institute_brain-lab/docker/: .gitignore  README.md  codebook.Dockerfile  devcontainer.Dockerfile  docker-compose-codebook_env.yaml  docker-compose-devcontainer_env.yaml  docker-compose-standard_workflow.yaml  nofile.txt  standard_worker.Dockerfile
datajoint-workflow/science-institute_brain-lab/docker/.devcontainer/: devcontainer.json  vscode-open-dev-container
datajoint-workflow/science-institute_brain-lab/docker/standard_worker/: build.env  run.example.env
datajoint-workflow/science-institute_brain-lab/docs/: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md
datajoint-workflow/science-institute_brain-lab/docs/hooks/: gen_api_pages.py
datajoint-workflow/science-institute_brain-lab/notebooks/: README.md  template.ipynb
datajoint-workflow/science-institute_brain-lab/scripts/: axon_upload.py  train_model.py
datajoint-workflow/science-institute_brain-lab/src/brain_lab/: __init__.py  __main__.py
datajoint-workflow/science-institute_brain-lab/src/brainwf/: __init__.py  entrypoint.py
datajoint-workflow/science-institute_brain-lab/src/sciops_brain_lab/: __init__.py  __main__.py  entrypoint.py
datajoint-workflow/science-institute_brain-lab/src/sciopsbrainlab/: __init__.py  __main__.py  entrypoint.py
datajoint-workflow/science-institute_brain-lab/tests/: conftest.py
datajoint-workflow/science-institute_brain-lab/tests/unit/: test_entrypoint.py
datajoint-workflow/{{cookiecutter.github_repo}}/: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  mkdocs.yml  noxfile.py  pyproject.toml  {{cookiecutter.__project_name}}.code-workspace  {{cookiecutter._djconfig}}  {{cookiecutter._vscode_ws_name}}.code-workspace
datajoint-workflow/{{cookiecutter.github_repo}}/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
datajoint-workflow/{{cookiecutter.github_repo}}/.github/workflows/: main-cicd.yml  package-updates.yml  run-tests.yml
datajoint-workflow/{{cookiecutter.github_repo}}/configs/: .gitignore  docstrings.mustache
datajoint-workflow/{{cookiecutter.github_repo}}/data/: .gitignore
datajoint-workflow/{{cookiecutter.github_repo}}/docker/: .datajoint_config.json  .gitignore  README.md  apt_requirements.txt  codebook.Dockerfile  devcontainer.Dockerfile  docker-compose-codebook_env.yaml  docker-compose-devcontainer_env.yaml  docker-compose-standard_workflow.yaml  standard_worker.Dockerfile
datajoint-workflow/{{cookiecutter.github_repo}}/docker/.devcontainer/: .env  devcontainer.json  docker-compose.yml
datajoint-workflow/{{cookiecutter.github_repo}}/docker/standard_worker/: build.env  run.example.env
datajoint-workflow/{{cookiecutter.github_repo}}/docs/: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md
datajoint-workflow/{{cookiecutter.github_repo}}/docs/css/: material.css
datajoint-workflow/{{cookiecutter.github_repo}}/docs/hooks/: gen_api_pages.py
datajoint-workflow/{{cookiecutter.github_repo}}/notebooks/: README.md
datajoint-workflow/{{cookiecutter.github_repo}}/scripts/: train_model.py
datajoint-workflow/{{cookiecutter.github_repo}}/tests/: conftest.py
datajoint-workflow/{{cookiecutter.github_repo}}/tests/unit/: __init__.py  (+1 more)
flit/{{cookiecutter.github_repo}}/: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.lock.yml  environment.yml  mkdocs.yml  noxfile.py  pyproject.toml  {{cookiecutter.__project_name}}.code-workspace
flit/{{cookiecutter.github_repo}}/data/: .gitignore
flit/{{cookiecutter.github_repo}}/docker/: README.md  apt_requirements.txt  codebook.Dockerfile  codebook.datajoint_config.json  docker-compose-codebook_env.yaml
flit/{{cookiecutter.github_repo}}/docs/: README.md  gen_api_pages.py
flit/{{cookiecutter.github_repo}}/scripts/: axon_upload.py  train_model.py
flit/{{cookiecutter.github_repo}}/tests/: conftest.py
(+104 files in other folders)
