[build-system]
requires = ["setuptools>=62.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-lab"
dynamic = ["version"]
description = "A Science Institute Workflow for Brain Lab"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "DataJoint", email = "info@datajoint.com" },
    { name = "FirstName LastName", email = "firstname@datajoint.com" },
]
keywords = ["datajoint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cryptography",                                                                       # datajoint
    "ipython",                                                                            # datajoint
    "matplotlib",                                                                         # datajoint
    "minio",                                                                              # datajoint
    "networkx<2.8.3",                                                                     # datajoint
    "numpy",                                                                              # datajoint
    "otumat",                                                                             # datajoint
    "pandas",                                                                             # datajoint
    "pydot",                                                                              # datajoint
    "pymysql",                                                                            # datajoint
    "pyparsing",                                                                          # datajoint
    "tqdm",                                                                               # datajoint
    "urllib3",                                                                            # datajoint
    "appdirs",                                                                            # djsciops-axon
    "boto3",                                                                              # djsciops-axon
    "flask",                                                                              # djsciops-axon
    "click",                                                                              # brain_lab
    "h5py",                                                                               # brain_lab
    "plotly",                                                                             # brain_lab
    "pyyaml",                                                                             # brain_lab
    "scipy",                                                                              # brain_lab
    "seaborn",                                                                            # brain_lab
    "tomli",                                                                              # brain_lab
    "datajoint>=0.13.7",                                                                  # brain_lab @ pypi
    "datajoint-utilities @ git+https://github.com/datajoint-company/datajoint-utilities", # brain_lab @ pypi
    "plotnine",                                                                           # brain_lab @ pypi
    "polars",                                                                             # brain_lab @ pypi
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pre-commit",
    "nox",
    "mypy",
    "notebook",
    "ipykernel",
]
doc = [
    "mkdocs",
    "mkdocstrings-python",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-include-markdown-plugin",
    "pymdown-extensions",
    "mike",
]
test = ["pytest", "faker"]
sciops = [
    "dj-wft-cim @ git+https://github.com/dj-sciops/wt-causality-in-motion",
    "djsciops",
]

[project.scripts]
brain_lab_entrypoint = "brain_lab.populate.entrypoint:cli"
brain_lab = "brain_lab.__main__:cli"

[project.urls]
Homepage = "https://github.com/dj-sciops"
Source = "https://github.com/dj-sciops/science-institute_brain-lab"
Documentation = "https://dj-sciops.github.io/science-institute_brain-lab"
DataJoint = "https://docs.datajoint.org/"

[tool.setuptools.dynamic]
version = { attr = "brain_lab.__version__" }

[tool.setuptools]
package-data = { "*" = ["*.pyi", "py.typed"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]
color = false
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.nox
    | \.venv
    | _build
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src"]
exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    "**/.ipynb_checkpoints",
    "**/__pycache__",
    "src/experimental",
    "src/scratch",
    "notebooks",
    "tests"
]
ignore = ["**/*.ipynb", "notebooks"]
stubPath = "typings"
reportMissingImports = true
reportMissingTypeStubs = false
