[build-system]
requires = ["setuptools>=62.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.__project_name}}"
description = "A DataJoint SciOps Workflow for {{cookiecutter.organization}}, {{cookiecutter.workflow}}"
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
license = { file = "LICENSE" }
authors = [
    { name = "DataJoint", email = "info@datajoint.com" },
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" },
]
keywords = ["datajoint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "cryptography", # datajoint
    "ipython",      # datajoint
    "matplotlib",   # datajoint
    "minio",        # datajoint
    "networkx",     # datajoint
    "numpy",        # datajoint
    "otumat",       # datajoint
    "pandas",       # datajoint
    "pydot",        # datajoint
    "pymysql",      # datajoint
    "pyparsing",    # datajoint
    "tqdm",         # datajoint
    "urllib3",      # datajoint
    "appdirs",      # djsciops-axon
    "boto3",        # djsciops-axon
    "flask",        # djsciops-axon
    "click",        # {{cookiecutter.__pkg_import_name}}
    "h5py",         # {{cookiecutter.__pkg_import_name}}
    "plotly",       # {{cookiecutter.__pkg_import_name}}
    "pyyaml",       # {{cookiecutter.__pkg_import_name}}
    "scipy",        # {{cookiecutter.__pkg_import_name}}
    "seaborn",      # {{cookiecutter.__pkg_import_name}}
    "tomli",        # {{cookiecutter.__pkg_import_name}}
]

[project.optional-dependencies]
dev = ["black", "flake8", "pre-commit", "nox", "mypy"]
doc = [
    "mkdocs",
    "mkdocstrings-python",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-include-markdown-plugin",
    "pymdown-extensions",
    "mike",
]
test = ["pytest"]
sciops = ["ipykernel", "djsciops", "datajoint>=0.13.4"]

[project.scripts]
wf_entrypoint = "{{cookiecutter.__pkg_import_name}}.entrypoint:cli"

[project.urls]
Homepage = "{{cookiecutter.homepage_url}}"
Source = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.github_repo}}"
Documentation = "{{cookiecutter.docs_url}}"
DataJoint = "https://docs.datajoint.org/"

[tool.setuptools.dynamic]
version = { attr = "{{cookiecutter.__pkg_import_name}}.__version__" }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]
color = false
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.nox
    | \.venv
    | _build
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src"]
exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    "**/.ipynb_checkpoints",
    "**/__pycache__",
    "src/experimental",
]
stubPath = "typings"
reportMissingImports = true
reportMissingTypeStubs = false
