[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "{{cookiecutter.__project_name}}"
description = "_{{cookiecutter.__short_description}}_"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "DataJoint", email = "info@datajoint.com" },
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" },
]
keywords = ["datajoint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["datajoint>=0.13.3"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "flake8", "pre-commit", "nox"]
doc = [
    "mkdocs",
    "mkdocstrings-python",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-include-markdown-plugin",
    "pymdown-extensions",
    "mike"
]
test = ["pytest"]

[project.scripts]
ingestion_entrypoint = "{{cookiecutter.__pkg_import_name}}.entrypoint:cli"

[project.urls]
Homepage = "{{cookiecutter.url_homepage}}"
Source = "{{cookiecutter.__url_source}}"
Documentation = "{{cookiecutter.__url_documentation}}"
DataJoint = "https://docs.datajoint.org/"

[tool.flit.module]
name = "{{cookiecutter.__pkg_import_name}}"

[tool.black]
line-length = 88
target-version = ["py310"]
color = false
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.nox
    | \.venv
    | _build
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
profile = "black"
color_output = false
